# navi

./: .gitignore  Cargo.toml  Makefile  README.md
src/: lib.rs  llm.rs  main.rs  render.rs  repl.rs  system_prompt.md  tool_definitions.json  tools.rs
src/docs/: design.md
tests/: llm_integration.rs  render_integration.rs
