[package]
name = "navi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3"
glob = "0.3"
owo-colors = "4.3.0"
regex = "1"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50.0", features = ["full"] }
